R84.05 PGLStackImageContainerController added Edit button for iPhone. Modified PGLStackImageController configureNavigationItem

--- a/RiftEffects/Main.storyboard
+++ b/RiftEffects/Main.storyboard
@@ -1390,7 +1390,7 @@
         <segue reference="Q8R-MU-xpB"/>
         <segue reference="4FJ-we-3bf"/>
         <segue reference="9zd-rM-3PO"/>
-        <segue reference="zWl-eA-30q"/>
+        <segue reference="HUk-NN-bR8"/>
         <segue reference="q90-Vk-s0q"/>
     </inferredMetricsTieBreakers>
     <resources>
